# mpu-6500-rs

./: Cargo.toml  README.md
src/: calibration.rs  lib.rs  raw_data.rs  register_map.rs
